Update dependency versions (#11)